--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "keywords": [],
   "author": "James",
   "license": "",
-
   "dependencies": {
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
@@ -32,7 +31,8 @@
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "react-datepicker": "^2.8.0"
   },
   "devDependencies": {
     "colors": "^1.3.3",
