--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "momen": "0.0.1-security",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-datepicker": "^2.8.0",
     "react-datetime-picker": "^2.7.1",
+    "react-day-picker": "^7.3.1",
     "react-dom": "^16.7.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
