--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "momen": "0.0.1-security",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
+    "react-burger-menu": "^2.6.11",
     "react-datepicker": "^2.8.0",
     "react-datetime-picker": "^2.7.1",
     "react-day-picker": "^7.3.1",
