--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "path": "^0.12.7",
+    "react-burger-menu": "^2.6.11",
     "react-datepicker": "^2.8.0"
   },
   "devDependencies": {
