--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
     "momen": "0.0.1-security",
+    "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-burger-menu": "^2.6.11",
